src/objects/PL_Channel_Goals__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Group__c</fullName>
        <label>Channel Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IPN</fullName>
                </value>
                <value>
                    <fullName>FAN</fullName>
                </value>
                <value>
                    <fullName>RSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LID</fullName>
                </value>
                <value>
                    <fullName>RSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_CY_Goal__c</fullName>
        <formula>Life_Q1_Goal__c + Life_Q2_Goal__c + Life_Q3_Goal__c + Life_Q4_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life CY Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Q1_Goal__c</fullName>
        <label>Life Q1 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Q2_Goal__c</fullName>
        <label>Life Q2 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Q3_Goal__c</fullName>
        <label>Life Q3 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MF_CY_Goal__c</fullName>
        <formula>MF_Q1_Goal__c + MF_Q2_Goal__c + MF_Q3_Goal__c + MF_Q4_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MF CY Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MF_Q1_Goal__c</fullName>
        <label>MF Q1 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MF_Q2_Goal__c</fullName>
        <label>MF Q2 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MF_Q3_Goal__c</fullName>
        <label>MF Q3 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_CY_Goal__c</fullName>
        <formula>TA_Q1_Goal__c + TA_Q2_Goal__c + TA_Q3_Goal__c + TA_Q4_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TA CY Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_Q1_Goal__c</fullName>
        <label>TA Q1 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_Q2_Goal__c</fullName>
        <label>TA Q2 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TA_Q3_Goal__c</fullName>
        <label>TA Q3 Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Channel Goals</label>
    <nameField>
        <label>Channel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Group__c</columns>
        <columns>Division__c</columns>
        <columns>TA_CY_Goal__c</columns>
        <columns>MF_CY_Goal__c</columns>
        <columns>Life_CY_Goal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Sales_Goals</fullName>
        <active>true</active>
        <label>Sales Goals</label>
    </recordTypes>
</CustomObject>